--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -11,7 +9,11 @@
 # next.js
 /.next/
 /out/
-
+.next
+./.next
+/.next/cache
+/.next/server
+/.next/static
 # production
 /build
 
